# stylefix

./: README.md  pyproject.toml
dashboard/: __init__.py  app.py  config.py  models.py  routes.py  theme.py
static/css/: base.css  components.css  dashboard.css  layout.css
static/js/: dashboard.js
templates/: dashboard.html
tests/: conftest.py  test_models.py  test_routes.py
